# CuboMath

./: .gitginore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/Inventory/: __init__.py  fibonacci.py
src/fibo_package/: fibo.py
tests/: test_fibonacci.py
