[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cubomath"
version = "0.1.0"
description = "CuboMath – a beginner-friendly open-source Python math library built by the community."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "S Vasanth" }
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

dependencies = []